--- a/Solong/MAKEFILE
+++ b/Solong/MAKEFILE
@@ -1,44 +1,43 @@
-# **************************************************************************** #
-#                                                                              #
-#                                                         :::      ::::::::    #
-#    MAKEFILE                                           :+:      :+:    :+:    #
-#                                                     +:+ +:+         +:+      #
-#    By: fmonbeig <fmonbeig@student.42.fr>          +#+  +:+       +#+         #
-#                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2021/07/28 12:05:23 by fmonbeig          #+#    #+#              #
-#    Updated: 2021/07/28 14:40:19 by fmonbeig         ###   ########.fr        #
-#                                                                              #
-# **************************************************************************** #
+NAME		= so_long
 
-NAME =	so_long
+CC			= gcc
 
-CC =	gcc
+CFLAG		= -Wall -Wextra -Werror
 
-CFLAG =	-Wall -Wextra -Werror -g -fsanitize=address
+MLX_FLAG	= -Lmlx_linux -lmlx_linux -Imlx_linux -lXext -lX11 -lm -lz
 
-OFLAG =	-Lmlx_linux -lmlx_linux -L/usr/lib -Imlx_linux -lXext -lX11 -lm -lz
+MLX_PATH	= ./mlx_linux
 
-MLX_PATH=	mlx_linux
-
-SRC =	 main.c
-
-SRC_OBJ =	$(SRC:.c=.o)
+SRC =	so_long.c \
+		check_map.c \
+		check_map2.c \
+		display_map.c \
+		error_msg.c \
+		game_end.c \
+		game_init.c \
+		get_next_line_utils.c \
+		get_next_line.c \
+		./utils/utils1.c \
+		
+SRC_OBJ		= $(SRC:.c=.o)
 
 all:	$(NAME)
 
-$(NAME):	$(SRC_OBJ)
-	$(CC) $(CFLAG) $(SRC_OBJ) $(OFLAG) $(NAME)
+.c.o:
+			${CC} ${CFLAGS} -Imlx_linux -c $< -o ${<:.c=.o}
 
-%.o:	%.c
-	$(CC) $(CFLAG) -I/usr/include -Imlx_linux -O3 -c $< -o $@
+$(NAME):	$(SRC_OBJ)
+		make -C ${MLX_PATH}
+		$(CC) $(CFLAG) -o $(NAME) $(SRC_OBJ) $(MLX_FLAG) 
 
 clean:
 				make -C ${MLX_PATH} clean
-				${RM} ${SRC_OBJ}
+				rm -f ${SRC_OBJ}
 
 fclean: 		clean
+				make -C ${MLX_PATH} clean
 				rm -f ${NAME}
 
 re:         	fclean all
 
-.PHONY:        all clean fclean re lmake
+.PHONY:        all clean fclean re
