--- a/Solong/MAKEFILE
+++ b/Solong/MAKEFILE
@@ -9,18 +9,19 @@ MLX_FLAG	= -Lmlx_linux -lmlx_linux -Imlx_linux -lXext -lX11 -lm -lz
 MLX_PATH	= ./mlx_linux
 
 SRC =	so_long.c \
-		check_map.c \
-		check_map2.c \
-		display_map.c \
-		error_msg.c \
-		game_end.c \
-		game_init.c \
-		get_next_line.c \
-		event.c \
-		event_move.c \
-		event_move2.c \
+		./check_map/check_map.c \
+		./check_map/check_map2.c \
+		./error/error_msg.c \
+		./error/error_msg2.c \
+		./init_display_end/game_end.c \
+		./init_display_end/game_init.c \
+		./init_display_end/display_map.c \
+		./event/event.c \
+		./event/event_move.c \
+		./event/event_move2.c \
 		./utils/utils1.c \
 		./utils/utils2.c \
+		./utils/get_next_line.c \
 		
 SRC_OBJ		= $(SRC:.c=.o)
 
